--- a/plotting_no.ipynb
+++ b/plotting_no.ipynb
@@ -70,10 +70,9 @@
     "editable": true
    },
    "source": [
-    "Read a grib file:\n",
-    "“z_cams_c_ecmf_20180204000000_prod_fc_sfc_003_uvbed.grib”.\n",
+    "Read a grib file: “z_cams_c_ecmf_20180919000000_prod_fc_sfc_000_tc_no.grib”.\n",
     "\n",
-    "This file contains forecasting data about the biologically effective dose 3 hours after the 00:00, Greenwich time, for the 4th of February 2018."
+    "This file contains forecasting data about NO values for the 19th of September 2018."
    ]
   },
   {
@@ -97,7 +96,8 @@
     "editable": true
    },
    "source": [
-    "retreiving data from grib file"
+    "Retreiving data from grib file. \n",
+    "Multipling for 1000000 to change unit value from kg/M3 to mg/M3."
    ]
   },
   {
@@ -255,7 +255,7 @@
     "editable": true
    },
    "source": [
-    "we can now use the code below to read all the grib files present in our folder, make  calculations, plot the data into an animation and save the results in  GIF format under the same directory. At the end of this process you should be able to see the output file called “animation_UV.gif”."
+    "we can now use the code below to read all the grib files present in our folder, make  calculations, plot the data into an animation and save the results in  GIF format under the same directory. At the end of this process you should be able to see the output file called “animation_no.gif”."
    ]
   },
   {
