--- a/plotting_pm25.ipynb
+++ b/plotting_pm25.ipynb
@@ -64,19 +64,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Read a grib file:\n",
-    "“z_cams_c_ecmf_20180204000000_prod_fc_sfc_003_uvbed.grib”.\n",
-    "\n",
-    "This file contains forecasting data about the biologically effective dose 3 hours after the 00:00, Greenwich time, for the 4th of February 2018."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -91,16 +78,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "retreiving data from grib file"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -112,16 +89,6 @@
    "source": [
     "grb = grbs.select()[0]\n",
     "data=grb.values * 1000000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Use shiftgrid to plot grib file correctly"
    ]
   },
   {
@@ -142,16 +109,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Define the projection system and the bounding box of our map using “Basemap” library by select the Cylindrical Equidistant Projection ‘cyl’ and including the coastline, meridians and parallels as shown below:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -169,16 +126,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "For plotting the data on the map created, we need to create a coordinate matriz with values of latitude and longitude with the function meshgrid and plot it on the map. Each pixel has the spatial resolution of 0,4 degree. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -190,16 +137,6 @@
    "source": [
     "grid_lon, grid_lat = np.meshgrid(lons, lats) #regularly spaced 2D grid\n",
     "x, y = m(grid_lon, grid_lat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Set the scale and palette color ramp of the map together with the legend, and plotting the grib. "
    ]
   },
   {
@@ -255,7 +192,7 @@
     "editable": true
    },
    "source": [
-    "we can now use the code below to read all the grib files present in our folder, make  calculations, plot the data into an animation and save the results in  GIF format under the same directory. At the end of this process you should be able to see the output file called “animation_UV.gif”."
+    "Creating animation and save it on a gif called 'animation_pm2p5.gif'."
    ]
   },
   {
