--- a/plotting_o3.ipynb
+++ b/plotting_o3.ipynb
@@ -70,10 +70,9 @@
     "editable": true
    },
    "source": [
-    "Read a grib file:\n",
-    "“z_cams_c_ecmf_20180204000000_prod_fc_sfc_003_uvbed.grib”.\n",
+    "Read a grib file: “z_cams_c_ecmf_20180919000000_prod_fc_ml_000_go3.grib”.\n",
     "\n",
-    "This file contains forecasting data about the biologically effective dose 3 hours after the 00:00, Greenwich time, for the 4th of February 2018."
+    "This file contains forecasting data about Ozone levels at different altitude at 00:00, Greenwich time, for the 19th of September 2018."
    ]
   },
   {
@@ -97,7 +96,7 @@
     "editable": true
    },
    "source": [
-    "retreiving data from grib file"
+    "Retreiving data from grib file: values at surface correspond to level 59."
    ]
   },
   {
@@ -255,7 +254,7 @@
     "editable": true
    },
    "source": [
-    "we can now use the code below to read all the grib files present in our folder, make  calculations, plot the data into an animation and save the results in  GIF format under the same directory. At the end of this process you should be able to see the output file called “animation_UV.gif”."
+    "Now running the code below you can create a gif called 'animation_o3.gif'. "
    ]
   },
   {
