completed script for ozone

--- a/plotting_o3.ipynb
+++ b/plotting_o3.ipynb
@@ -1133,35 +1133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"pollutants/20180919/o3/animation_o3.gif\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import Image\n",
-    "Image(url='pollutants/20180919/o3/animation_o3.gif')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -1169,6 +1140,26 @@
    },
    "source": [
     "![](https://github.com/Randbee/Copernicus_UV_data/blob/master/data/animation_UV.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The gif produced is bigger than 100 Mbs so it cannot be uploaded on GitHub. \n",
+    "You  can visualized it, after running this script and de following code "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url='pollutants/20180919/o3/animation_o3.gif')"
    ]
   },
   {
