--- a/UVIndex_new.ipynb
+++ b/UVIndex_new.ipynb
@@ -71,9 +71,9 @@
    },
    "source": [
     "Read a grib file:\n",
-    "“z_cams_c_ecmf_20180204000000_prod_fc_sfc_003_uvbed.grib”.\n",
+    "“z_cams_c_ecmf_20180919000000_prod_fc_sfc_000_uvbed.grib”.\n",
     "\n",
-    "This file contains forecasting data about the biologically effective dose 3 hours after the 00:00, Greenwich time, for the 4th of February 2018."
+    "This file contains forecasting data about the biologically effective at 00:00, Greenwich time, for the 19th of September 2018."
    ]
   },
   {
